# OpenLife

./: .gitignore  CMakeLists.txt
imgui/: imgui.cpp  imgui_demo.cpp  imgui_widgets.cpp
include/: controls.hpp  particle.hpp  renderer.hpp  simulation.cuh  simulation.hpp
src/: controls.cpp  main.cpp  particle.cpp  renderer.cpp  simulation.cu
